tool/src/cpp/snapshots/diplomat_tool__cpp__structs__tests__method_taking_str@MyStruct.hpp.snap
---
source: tool/src/cpp/structs.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_HPP
#define MyStruct_HPP
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include <algorithm>
#include <memory>
#include <variant>
#include <optional>
#include "diplomat_runtime.hpp"

#include "MyStruct.h"

class MyStruct;

/**
 * A destruction policy for using MyStruct with std::unique_ptr.
 */
struct MyStructDeleter {
  void operator()(capi::MyStruct* l) const noexcept {
    capi::MyStruct_destroy(l);
  }
};
class MyStruct {
 public:
  static MyStruct new_str(const std::string_view v);
  void set_str(const std::string_view new_str);
  inline const capi::MyStruct* AsFFI() const { return this->inner.get(); }
  inline capi::MyStruct* AsFFIMut() { return this->inner.get(); }
  inline MyStruct(capi::MyStruct* i) : inner(i) {}
  MyStruct() = default;
  MyStruct(MyStruct&&) noexcept = default;
  MyStruct& operator=(MyStruct&& other) noexcept = default;
 private:
  std::unique_ptr<capi::MyStruct, MyStructDeleter> inner;
};


inline MyStruct MyStruct::new_str(const std::string_view v) {
  return MyStruct(capi::MyStruct_new_str(v.data(), v.size()));
}
inline void MyStruct::set_str(const std::string_view new_str) {
  capi::MyStruct_set_str(this->inner.get(), new_str.data(), new_str.size());
}
#endif

